ansible/roles/test/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lcm-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: cdd-registry.cdd.dc.itte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eric-lcm-container-registry-registry
            port:
              number: 80
    https:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eric-lcm-container-registry-registry
            port:
              number: 443
